one more commit

--- a/vacationrental/index.html
+++ b/vacationrental/index.html
@@ -22,7 +22,7 @@
 
         <div class="col-md-6 row custommargin">
             <div class="col-md-6">
-                <h5 class="logo">SURAJ VACATION RENTAL</h5>
+                <h5 class="logo">ROY RESORT</h5>
             </div>
 
             <div class="col-md-6 row">
@@ -196,7 +196,7 @@
 
             <div class="col-md-4">
                 <div class="container">
-                    <h5>SURAJ VACATION RENTAL</h5>
+                    <h5>ROY RESORT</h5>
                     <p class="text-white">Leather detail shoulder contrastic colour
                         contour stunning silhouette working peplum.
                         Statement buttons cover-up tweaks patch.Leather detail shoulder contrastic colour
