--- a/vacationrental/contact.html
+++ b/vacationrental/contact.html
@@ -28,7 +28,7 @@
             <div class="col-md-6 row">
                 <span class="col-md-6">+10 654 456 7894</span>
 
-                <span class="col-md-6">info@surjvacationrental.com</span>
+                <span class="col-md-6">info@royresort.com</span>
             </div>
         </div>
 
