--- a/vacationrental/rooms.html
+++ b/vacationrental/rooms.html
@@ -28,7 +28,7 @@
             <div class="col-md-6 row">
                 <span class="col-md-6">+10 654 456 7894</span>
 
-                <span class="col-md-6">info@surjvacationrental.com</span>
+                <span class="col-md-6">info@royresort.com</span>
             </div>
         </div>
 
@@ -222,7 +222,7 @@
                     <h5>Address</h5>
                     <p style="font-size: 18px;">76/A, Green Lane, Dhanmondi, NYC</p>
                     <p style="font-size: 26px; color: #FFF7F3;">10 (87) 738-3940</p>
-                    <p style="font-size: 12px; color: #FFF7F3;">contact@vacationrental.com</p>
+                    <p style="font-size: 12px; color: #FFF7F3;">contact@royresort.com</p>
 
                 </div>
             </div>
