--- a/vacationrental/about.html
+++ b/vacationrental/about.html
@@ -169,9 +169,9 @@
             <div class="col-md-4">
                 <div class="container">
                     <h5>Address</h5>
-                    <p style="font-size: 18px;">76/A, Green Lane, Dhanmondi, NYC</p>
-                    <p style="font-size: 26px; color: #FFF7F3;">10 (87) 738-3940</p>
-                    <p style="font-size: 12px; color: #FFF7F3;">contact@royresort.com</p>
+                          <p style="font-size: 18px;">76/A, Green Lane, Dhanmondi, NYC</p>
+                    <p style="font-size: 26px; ">10 (87) 738-3940</p>
+                    <p style="font-size: 18px; ">contact@royresort.com</p>
 
                 </div>
             </div>
