one more commit

--- a/vacationrental/about.html
+++ b/vacationrental/about.html
@@ -145,7 +145,7 @@
             <div class="col-md-4">
                 <div class="container">
                     <h5>ROY RESORT</h5>
-                    <p class="text-white">Leather detail shoulder contrastic colour
+                    <p>Leather detail shoulder contrastic colour
                         contour stunning silhouette working peplum.
                         Statement buttons cover-up tweaks patch.Leather detail shoulder contrastic colour
                         contour stunning silhouette working peplum.
